// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AttributeGroupContainer > should match snapshot 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-otp1ie-MuiPaper-root-MuiCard-root"
    >
      <div
        class="MuiCardHeader-root css-l0c4qg-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 MuiCardHeader-title css-1jixpvg-MuiTypography-root"
          >
            title
          </span>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-1jqdwvk-MuiCardContent-root"
      />
    </div>
  </div>
</body>
`;

exports[`AttributeGroupContainer > should match snapshot with on remove action 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-otp1ie-MuiPaper-root-MuiCard-root"
    >
      <div
        class="MuiCardHeader-root css-l0c4qg-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 MuiCardHeader-title css-1jixpvg-MuiTypography-root"
          >
            title
          </span>
        </div>
        <div
          class="MuiCardHeader-action css-sgoict-MuiCardHeader-action"
        >
          <button
            aria-label="removeGroupAriaLabel"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1d159sf-MuiSvgIcon-root"
              data-testid="ClearIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-1jqdwvk-MuiCardContent-root"
      />
    </div>
  </div>
</body>
`;
